# 3d-graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
src/: display.c  display.h  dynamic_array.h  main.c  mesh.c  mesh.h  triangle.c  triangle.h  vector.c  vector.h
